platform/iam/identity/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ory-kratos
spec:
  parentRefs:
    - name: public-gateway
      namespace: networking

  hostnames:
    - accounts.toando.de

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api

      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /

      backendRefs:
        - name: kratos-public
          port: 4433
